@startuml

skinparam shadowing false

class DAO << (J,red) >>
class DBConnector << (J,red) >>
class CupCake << (E,lightblue) >>
class CupCakePiece << (E,lightblue) >>
class Order << (E,lightblue) >>
class Orderline << (E,lightblue) >>
class User << (E,lightblue) >>

CupCake : - CupCakePiece bottom
CupCake : - CupCakePiece topping
CupCake : - double price
CupCake : - int amount
CupCake : + int getAmount()
CupCake : + int hashCode()
CupCake : + boolean equals()
CupCake : + void addAmount()
CupCake : + String toString()
CupCakePiece : - int id
CupCakePiece : - String flavor
CupCakePiece : - double price
CupCakePiece : + String toString()
CupCakePiece : + int hashCode()
CupCakePiece : + boolean equals()
Order : - int id
Order : - ArrayList<Orderline> orderlines
Order : - double totalPrice
Order : - String dateTime
Orderline : - int userId
Orderline : - int orderId
Orderline : - int orderLineId
Orderline : - CupCake cupCake
Orderline : + String toString()
Orderline : + int hashCode()
Orderline : + boolean equals()
User : - int id
User : - String username
User : - String password
User : - double balance
User : - String role
User : + String toString()
DAO : - DBConnector conn
DAO : + User getUser(String u)
DAO : + User getUser(int id)
DAO : + ArrayList<User> getUsers()
DAO : + boolean createCustomer(String username, String password1, String password2)
DAO : + boolean createAdmin(String username, String password1, String password2)
DAO : + ArrayList<CupCakePiece> getToppings()
DAO : + ArrayList<CupCakePiece> getBottoms()
DAO : + CupCakePiece getTopping(int id)
DAO : + CupCakePiece getBottom(int id)
DAO : + User login(String username, String password)
DAO : + Order getOrder(int id)
DAO : + ArrayList<Order> getUsersOrders(int id)
DAO : + ArrayList<Order> getAllOrders()
DAO : + int insertOrder(ArrayList<CupCake> cart, User user)
DAO : + boolean addTopping(String flavor, doubke price)
DAO : + boolean addBottom(String flavor, doubke price)
DAO : + boolean changeOrderlineAmount(int id, int amount)
DAO : + String getUserById(int id)
DAO : + double deposit(int id double value)
DAO : + boolean withdrawal(int id, double value)
DAO : + void updateOrderLine(int orderlineId, int amount)
DBConnector : - Connection conn
DBConnector : - String IP
DBConnector : - int PORT
DBConnector : + String DATABASE
DBConnector : - String USERNAME
DBConnector : - String PASSWORD
DBConnector : + Connection getConnection()

CupCake "*" -left- "2" CupCakePiece
Order "1" -right- "*" Orderline
Orderline "*" -- "1" CupCake
User "1" -- "*" Order
DAO --> DBConnector

@enduml
